@@ -1,0 +1,25 @@
+/* XPM */
+static char * unlock_xpm[] = {
+"20 16 6 1",
+" 	s None	c None",
+".	s Gray	c Grey50",
+"X	s Light gray	c Grey75",
+"o	c White",
+"O	s Dark gray	c Grey25",
+"+	c Black",
+"        ..          ",
+"       X.           ",
+"      oO.           ",
+"      X.            ",
+"      XO            ",
+"      XX            ",
+"     oX.XXX...O     ",
+"     X.X.OO...+     ",
+"     o.XO++O...     ",
+"     XX.O++O..O     ",
+"     o...++..O+     ",
+"     X...++..O.     ",
+"     ....++.O.+     ",
+"     X...OOO.OO     ",
+"     ...OO+.O+O     ",
+"                    "};
